--- a/successLTRO.html
+++ b/successLTRO.html
@@ -69,7 +69,7 @@
                     <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
                         Vă vom contacta curând!</h1>
                     
-                    <div class="mbr-section-btn align-center"><a class="btn btn-md btn-danger display-4" href="index.html" target="_blank">PAJINA PRINCIPALĂ</a></div>
+                    <div class="mbr-section-btn align-center"><a class="btn btn-md btn-danger display-4" href="index.html">PAJINA PRINCIPALĂ</a></div>
                 </div>
             </div>
         </div>
